--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "helpers",
+  "name": "@vtrushin/helpers",
   "version": "0.0.1",
   "author": "Vlad Trushin",
   "description": "Helpers",
