--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "test": "jest"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "jest": "^23.1.0"
+    "@types/jest": "^24.0.15",
+    "jest": "^24.8.0"
   },
   "bugs": {
     "url": "https://github.com/vtrushin/helpers/issues"
